# intro_statistical_learning

./: .envrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  chapter_2.ipynb  env.yaml  environment.yaml  flake.nix  pyproject.toml
