[tool.poetry]
name = "intro-statistical-learning"
version = "0.1.0"
description = "Exercises - An Introduction to Statistica Learning (2023)"
authors = ["Pedro Mendes <pedrohrmendes@proton.me>"]
license = "gpl-2.0"
readme = "README.md"

[tool.poetry.dependencies]
ISLP = "^0.3.19"
matplotlib = "^3.7.2"
numpy = ">=1.7.1,<1.25"
pandas = "<=1.9"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
jedi-language-server = "*"
jupyterlab = "*"
jupyterlab-lsp = "*"
jupyterlab-vim = "*"
pre-commit = "*"
nbqa = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
ignore = [
  "D100",   # missing docstring in public module
  "ARG001", # unused function argument
  "S603",   # subprocess call - check for execution of untrusted input
  "ANN101", # missing type annotation for self in method
]
select = [
  "A",   # flake8-builtins
  "ANN", # flake8-annotations
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "COM", # flake8-commas
  "D",   # pydocstyle
  "E",   # error
  "EM",  # flake8-errmsg
  "F",   # pyflakes
  "FBT", # flake8-boolean-trap
  "G",   # flake8-logging-format
  "I",   # isort
  "ISC", # flake8-implicit-str-concat
  "N",   # pep8-naming
  "PGH", # pygrep-hooks
  "PL",  # pylint
  "PLR", # refactor
  "PTH", # flake8-use-pathlib
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # warning
  "YTT", # flake8-2020
]
exclude = ["__pycache__", "env", ".env", "venv", ".venv"]
