[tool.poetry]
name = "islp"
version = "0.1.0"
description = "Solved exercises - An Introduction to Statistical Learning"
authors = ["Pedro Mendes <pedrohrmendes@proton.me>"]
readme = "README.md"
repository = "https://github.com/phrmendes/intro_statistical_learning"
keywords = ["machine learning", "statistics"]
license = "GPL-3.0"

[tool.poetry.dependencies]
basedpyright = "^1.11.0"
debugpy = "^1.8.1"
ipython = "^8.22.2"
jupyterlab = "^4.1.5"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
python = "^3.12"
scikit-learn = "^1.4.1.post1"
statsmodels = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
venvPath = ".venv"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
select = ["ALL"]
exclude = [".git", ".ruff_cache", "__pycache__"]

ignore = [
  "ANN101", # missing type annotation for self in method
  "ARG001", # unused function argument
  "D100",   # missing docstring in public module
  "D103",   # missing docstring in public function
  "S603",   # subprocess call - check for execution of untrusted input
  "T201",   # print statement used in code
]
