[project]
name = "islp"
version = "0.1.0"
description = "Solved exercises from An Introduction to Statistical Learning (2023)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jupyterlab-lsp>=5.1.0",
  "jupyterlab>=4.3.1",
  "matplotlib>=3.9.3",
  "pandas>=2.2.3",
  "pylsp-mypy>=0.6.9",
  "python-lsp-ruff>=2.2.2",
  "python-lsp-server>=1.12.0",
  "scikit-learn>=1.5.2",
  "statsmodels>=0.14.4",
]

[tool.pylsp.plugins]
ruff = { enabled = true, formatEnabled = true }
pylsp_mypy = { enabled = true }

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "W",
]

[tool.ruff.format]
quote-style = "double"
